# renderer

./: .gitignore  CMakeLists.txt  README.md
assets/fragment/: black.frag  const_col.frag  defaultBalls.frag  defaultFrag.frag
assets/geometry/: defaultBalls.geom
assets/vertex/: defaultBalls.vert  defaultVertex.vert  pos.vert  pos_col.vert
examples/: CMakeLists.txt
examples/000-empty-window/: src.cpp
examples/001-simple-triangle/: shader.frag  shader.vert  src.cpp
examples/002-mesh-triangle/: src.cpp
examples/003-mesh3D-triangle/: src.cpp
examples/004-ball3D-simple/: src.cpp
examples/005-ball3D-moving/: src.cpp
examples/advection/: src.cpp  texture.frag  texture.vert
examples/colormaps/: src.cpp
examples/function_visualisation/: src.cpp
examples/hello_mesh/: src.cpp
examples/hello_tet/: src.cpp
examples/hello_triangle/: src.cpp
examples/hello_window/: src.cpp
examples/rotate_3D_test/: line.frag  line.geom  line.vert  src.cpp
examples/test-ball-rendering/: shader.frag  shader.vert  src.cpp
examples/test-blend/: shader.frag  shader.vert  src.cpp
examples/test-uniform-blocks/: defaultFrag.frag  src.cpp
examples/utah-teapot/: shader.frag  shader.vert  src.cpp
include/: CMakeLists.txt  array.hpp  buffer.hpp  colormaps.hpp  log.h  model.hpp  renderer.hpp  scene.hpp  shader.hpp  uniforms.hpp  window.hpp
include/models/: CMakeLists.txt  balls.hpp  lines.hpp  model.hpp  polymesh.hpp  trimesh.hpp
src/: CMakeLists.txt  array.cpp  buffer.cpp  colormaps.cpp  model.cpp  scene.cpp  shader.cpp  window.cpp
src/models/: CMakeLists.txt  balls.cpp  lines.cpp  model.cpp  trimesh.cpp
